objects/PriceRenewalCampaignItem__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Curtomer of contracted price</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Renewal Campaign Items</relationshipLabel>
        <relationshipName>Price_Renewal_Campaign_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractedPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Relation to Contracted price</inlineHelpText>
        <label>Contracted Price</label>
        <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
        <relationshipLabel>Price Renewal Campaign Items</relationshipLabel>
        <relationshipName>Price_Renewal_Campaign_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentPrice__c</fullName>
        <formula>TF_CurrentPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <description>Error during creation of Renewal quote</description>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullSegment__c</fullName>
        <formula>Product__r.FullSegmentsNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainStatus__c</fullName>
        <formula>TEXT(PriceRenewalCampaign__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MainStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinContractedPrice__c</fullName>
        <label>Min Contracted Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewPrice__c</fullName>
        <formula>CurrentPrice__c  * (1 + PriceIncrease__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ok__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark to indicate changed of approved status</inlineHelpText>
        <label>Ok</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PackSize__c</fullName>
        <formula>Product__r.PackageDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceIncrease__c</fullName>
        <label>Price Increase</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PriceRenewalCampaign__c</fullName>
        <label>Price Renewal Campaign</label>
        <referenceTo>PriceRenewalCampaign__c</referenceTo>
        <relationshipLabel>Price Renewal Campaign Items</relationshipLabel>
        <relationshipName>PriceRenewalCampaignLine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Price_Campaign_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Min Quantity</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Review</fullName>
                    <color>#DDDDDD</color>
                    <default>true</default>
                    <label>Review</label>
                </value>
                <value>
                    <fullName>Updated</fullName>
                    <color>#BBBBBB</color>
                    <label>Updated</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                    <color>#66FF99</color>
                    <label>Processed</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <color>#FF9966</color>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TF_CurrentPrice__c</fullName>
        <label>TF_Current Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TF_PriceBookEntry__c</fullName>
        <description>Link to PBE</description>
        <label>TF_PriceBookEntry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Price Renewal Campaign Item</label>
    <nameField>
        <displayFormat>PRCI-{000000}</displayFormat>
        <label>Price Renewal Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Renewal Campaign Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allow_editing_only_in_Reviewmode</fullName>
        <active>true</active>
        <description>Make sure a user can only update the item record in the corrects stage and state for the financial data</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 



if  (ISNEW() = false 
&amp;&amp;  
(
  ISCHANGED(  PriceIncrease__c ) 
   ||
  
  ISCHANGED( MinContractedPrice__c) 
) 
  &amp;&amp;
(
   (TEXT(Status__c) != &apos;Review&apos; &amp;&amp; TEXT(Status__c) != &apos;Updated&apos;  
    &amp;&amp;  
    MainStatus__c != &apos;Review&apos; )
), true, false)

)</errorConditionFormula>
        <errorMessage>Sorry, update only possible in Review status</errorMessage>
    </validationRules>
</CustomObject>